@@ -6,6 +6,7 @@ Changelog for 1.3.44
 * Allow blank salutations, bug 1204. (Chris T)
 * Easier creation of select widgets with blanks. (Chris T)
 * Display vendor's sku if available on orders and invoices, bug 1218 (Chris T)
+* Fixing error in batch locking that locks users out (Chris T)
 
 Chris T is Chris Travers
 
